# FlightPod

./: .env.example  .gitignore  LICENSE  README.md  flightpod-plan.md
apps/pi/: README.md  config.example.yml  install.sh  pyproject.toml  requirements.txt  uninstall.sh
apps/pi/flightpaper/: __init__.py  config.py  logging_setup.py  main.py
apps/pi/flightpaper/aircraft/: __init__.py  filters.py  processor.py  sort.py
apps/pi/flightpaper/api/: __init__.py  app_state.py  auth.py  background.py  routes_public.py  routes_secure.py  routes_status.py  schemas.py  secure_envelope.py  server.py
apps/pi/flightpaper/display/: __init__.py  epaper.py  fonts.py  layouts.py  qr.py  renderer.py  symbols.py  waveshare_driver.py  waveshare_driver_v4.py
apps/pi/flightpaper/hardware/: __init__.py  (+6 more)
apps/pi/scripts/: enable_interfaces.sh  generate_pairing_qr.py  mock_opensky_server.py  render_preview.py  reset_pairing.py  test_battery.py  test_buttons.py  test_display.py  test_opensky.py
apps/pi/systemd/: flightpaper.service
apps/pi/tests/: conftest.py  test_aircraft_pipeline.py  test_buttons.py  test_cache.py  test_config.py  test_crypto.py  test_device_identity.py  test_geo.py  test_key_store.py  test_location_manager.py  test_location_payload.py  test_logging_setup.py  test_opensky_client.py  test_opensky_parser.py  test_pairing.py  test_pisugar3.py  test_qr.py  test_rate_limit.py  test_renderer.py  test_replay.py  test_routes_public.py  test_routes_secure.py  test_secure_envelope.py  test_short_code.py  test_time_utils.py  test_ui_state.py  test_units.py  test_validators.py
(+122 files in other folders)
