[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flightpaper"
version = "0.1.0"
description = "FlightPaper Raspberry Pi ePaper aircraft display service"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "FlightPaper contributors" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "Pillow>=10.3",
    "PyYAML>=6.0",
    "PyNaCl>=1.5",
    "qrcode>=7.4",
]

[project.optional-dependencies]
hardware = [
    # Raspberry Pi-only runtime extras. Import-guarded so the package
    # also runs on macOS for development.
    "gpiozero>=2.0",
    "spidev>=3.6",
    "lgpio>=0.2; platform_machine=='aarch64' or platform_machine=='armv7l' or platform_machine=='armv6l'",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "freezegun>=1.5",
    "jsonschema>=4.22",
    "ruff>=0.5",
]

[project.scripts]
flightpaper = "flightpaper.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["flightpaper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length is enforced by formatter, not lint
